# nebula-shell

./: .gitignore  AGENTS.md  CHANGELOG.md  PKGBUILD  README.md  RELEASE_CHECKLIST.md  SUMMARY.md  install.sh  makefile  meson.build  patch-gir.sh
.agents/: .cursorrules  API.md  PLAN.md  ROADMAP.md  SKILL.md  TODO.md  prompt.md
bindings/nebula_shell/: __init__.py  _gi.py  app.py  theme.py  version.py
bindings/nebula_shell/animation/: __init__.py  animation.py  fade.py  scale.py  slide.py
bindings/nebula_shell/config/: __init__.py  config.py
bindings/nebula_shell/ipc/: __init__.py  ipc.py
bindings/nebula_shell/plugin/: __init__.py  plugin.py
bindings/nebula_shell/services/: __init__.py  audio.py  battery.py  bluetooth.py  media.py  network.py  service.py  workspace.py
bindings/nebula_shell/ui/: __init__.py  box.py  button.py  container.py  entry.py  grid.py  icon.py  image.py  label.py  overlay.py  panel.py  separator.py  spacer.py  stack.py  widget.py  window.py
bindings/nebula_shell/utils/: __init__.py  logger.py
core/: meson.build
core/nebula-shell/: anchor.vala  animation.vala  animation_scheduler.vala  application.vala  binding.vala  box.vala  button.vala  cli.vala  cli_dev.vala  cli_doctor.vala  cli_format.vala  cli_init.vala  cli_inspect.vala  cli_plugin.vala  cli_run.vala  cli_theme.vala  cli_version.vala  click_event.vala  compositor.vala  computed.vala  config.vala  config_manager.vala  config_reload.vala  container.vala  css_helper.vala  dev_tools.vala  drag_event.vala  easing.vala  entry.vala  event.vala  event_handler.vala  fade_animation.vala  focus_event.vala  frame_timing.vala  grid.vala  hot_reload.vala  hover_event.vala  hyprland_backend.vala  icon.vala  image.vala  (+47 more)
data/: nebula-shell.1  nebula-shell.desktop  nebula-shell.schema.json  shell.css  shell.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  CONTRIBUTING.md  EXAMPLES.md  GETTING_STARTED.md  IMPLEMENTATION_RULES.md  api.md  contributing.md  examples.md
docs/api/: animation.md  application.md  box.md  button.md  container.md  easing.md  entry.md  fade_animation.md  grid.md  icon.md  image.md  label.md  overlay.md  panel.md  scale_animation.md  separator.md  service.md  slide_animation.md  spacer.md  stack.md  theme.md  widget.md  window.md
docs/widgets/: bar.md  box.md  button.md  clock.md  cpu.md  dialog.md  label.md  panel.md  popup.md  separator.md  workspaces.md
etc/nebula-shell/: config.yaml  events.lua
etc/nebula-shell/styles/: style.css
etc/nebula-shell/widgets/: yaml.lua
etc/nebula-shell/widgets/nebula/: bar.lua  box.lua  button.lua  clock.lua  cpu.lua  dialog.lua  label.lua  panel.lua  popup.lua  separator.lua  workspaces.lua
examples/: basic_panel.py  clock.css  clock.py  launcher.css  launcher.py  notification.css  notification.py  top-bar.css  top-bar.py
src/: nebula_shell.vala
src/cli/: commands.vala  inspector.vala  main.vala  runner.vala  schema_gen.vala
src/core/: application.vala  config_loader.vala  css_manager.vala  layer_shell.vala  lua_bridge.vala  registry.vala  widget_builder.vala
src/utils/: file_utils.vala  logger.vala
tests/: meson.build  test_binding.vala  test_config.vala  test_ipc.vala  test_kernel.vala  test_logger.vala  test_object.vala  test_observable.vala  test_property.vala  test_registry.vala  test_service.vala  test_window.vala
tools/: install-gir.sh
vapi/: gtk4-layer-shell-0.vapi  lua5.4.vapi
